--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  font-family: "KaiTi", "楷体", "Times New Roman", Helvetica, Arial, sans-serif;
+  font-family: "KaiTi", "楷体", "Noto Sans CJK JP", "Times New Roman", Helvetica, Arial, sans-serif;
   height: 100vh;
   display: flex;
   flex-direction: column;
