--- a/public/style2.css
+++ b/public/style2.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "KaiTi", "楷体", 'Noto Sans', "Noto Sans CJK JP", "Times New Roman", Helvetica, Arial, sans-serif;
+  font-family: "Times New Roman", Helvetica, Arial, sans-serif;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -8,7 +8,7 @@ body {
 }
 
 .radio {
-  margin-top: 80px;
+  margin-top: 10px;
   display: flex;
   flex-direction: row;
   margin-bottom: 10px;
@@ -20,8 +20,14 @@ label {
   width: 60px; 
 }
 
+#cat {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
 
-#total{
+#correct{
   width: 120px;
   height: 20px;
   margin: auto;
@@ -30,51 +36,46 @@ label {
   text-align: center;
 }
 
-#learn{
+#error{
   width: 120px;
   height: 20px;
   margin: auto;
   border: 1pt solid black;
-  background-color: pink;
+  background-color: red;
   text-align: center;
+  color: white;
 }
 
-#card {
+.container1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.card {
   margin: auto;
   background-color: #FFE5B4;
-  width: 300px;
-  height: 300px;
-  font-size: 200px;
+  width: 400px;
+  height: 100px;
+  font-size: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 20px;
   border: 10pt solid pink;
   /*font-weight: bold;*/
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
-#pinyin {
-  margin-top: -40px;
-  margin-right: 20px;
-  font-family: Cambria;
-  font-size: 35px;
-  text-align: right;
+i{
+  margin: 2px;
 }
 
-#count {
-  margin-top: -35px;
-  margin-left: 20px;
-  height: 20px;
-  font-family: Cambria;
-  font-size: 20px;
-  text-align: left;
-}
-
-button {
-  width: 150px;
+input[type=button] {
+  width: 70px;
   height: 50px;
-  background-color: lightblue;
+  background-color: greenyellow;
   margin: auto;
   margin-top: 20px;
   border: 1pt solid blue;
@@ -82,10 +83,11 @@ button {
   font-size: 20px;
 }
 
-#error-btn {
-  background-color: yellowgreen;
-  border: 1pt solid green;
+#happy, #sad{
+  width: 120px;
+  height: 120px;
 }
 
-
-
+#sad{
+  display: none;
+}
