--- a/public/style3.css
+++ b/public/style3.css
@@ -8,12 +8,13 @@ body {
 }
 
 .radio {
-  width: 420px;
+  width: 370px;
   margin-top: 50px;
   display: flex;
   flex-direction: row;
   margin-bottom: 10px;
   flex-wrap: wrap;
+  justify-content: left;
 }
 
 input[type=radio], input[type=checkbox]  {
@@ -23,7 +24,8 @@ input[type=radio], input[type=checkbox]  {
 label {
   margin-left: 10px;
   height: 10px;
-  width: 60px; 
+  width: 50px; 
+  display: inline;
 }
 
 #card {
