--- a/public/style2.css
+++ b/public/style2.css
@@ -12,12 +12,14 @@ body {
   display: flex;
   flex-direction: row;
   margin-bottom: 10px;
+  width: 400px;
+  justify-content: center;
 }
 
 label {
   margin-left: 10px;
   height: 10px;
-  width: 60px; 
+  width: 50px; 
 }
 
 #cat {
@@ -55,9 +57,9 @@ label {
 .card {
   margin: auto;
   background-color: #FFE5B4;
-  width: 400px;
+  width: 380px;
   height: 100px;
-  font-size: 40px;
+  font-size: 35px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -72,7 +74,7 @@ i{
   margin: 2px;
 }
 
-input[type=button] {
+.but p {
   width: 70px;
   height: 50px;
   background-color: greenyellow;
@@ -80,7 +82,10 @@ input[type=button] {
   margin-top: 20px;
   border: 1pt solid blue;
   border-radius: 10px;
-  font-size: 20px;
+  font-size: 40px;
+  display: flex;  
+  justify-content: center;
+  align-items: center;
 }
 
 #happy, #sad{
