--- a/public/common.css
+++ b/public/common.css
@@ -94,6 +94,8 @@ h1{
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  width: 400px;
+  margin: auto;
 }
 
 @media (min-width: 800px) {
