--- a/public/piano.css
+++ b/public/piano.css
@@ -11,6 +11,7 @@ body {
   align-items: center;
 }
 
+
 #cat {
   display: flex;
   flex-direction: row;
@@ -27,28 +28,131 @@ body {
   text-align: center;
 }
 
-.piano{position:relative}
-.piano--white-keys{text-align:center;display:flex;width:100%;overflow:hidden;height:200px}
-.key .white-key{display:flex;align-items:flex-end;justify-content:center;background:#fff;border-top:1px solid rgba(32,32,32,0.2);border-right:1px solid rgba(32,32,32,0.3);border-bottom:1px solid rgba(32,32,32,0.3);border-radius:0 0 5px 5px;box-shadow:0 5px 1px rgba(32,32,32,0.2);width:100%;height:190px;transition:background-color .05s ease,box-shadow .05s ease}
-.key .white-key.active{background:#d8d8d8;transform:translateY(4px);box-shadow:0 0 0 rgba(32,32,32,0);transition:background-color .05s ease,box-shadow .05s ease}
-.key *{-webkit-user-select:none;user-select:none;font-family:'Open Sans',sans-serif}
-.key{width:100%;cursor:pointer;z-index:1}
-.key>span i{position:absolute;display:flex;align-items:center;justify-content:center;font-style:normal;font-variant:normal;margin-bottom:12px;width:20px;height:20px;border-radius:50%}
-.key .note{margin-bottom:11px}
-.key .marked i{background-color:#72ac51;box-shadow:inset -1px -3px 4px rgba(32,32,32,0.3);width:20px;height:20px;border-radius:50%;color:transparent;margin-top:-12px}
-.piano--black-keys{height:0;position:absolute;display:flex;justify-content:center;width:100%}
-.key>span *{pointer-events:none}
-.piano--black-keys ul{display:flex;width:95%;padding-bottom:0}
-.piano--black-keys li{display:flex;justify-content:center;width:100%;height:0;box-sizing:border-box}
-.piano--black-keys .key{z-index:2}
-.piano--black-keys li>span{height:110px;display:flex;justify-content:center;align-items:flex-end;width:80%;background-color:#000;background:linear-gradient(-20deg,#222,#000,#222);box-shadow:0 5px 1px rgba(32,32,32,0.2);transition:background-color .05s ease,box-shadow .05s ease;border-radius:0 0 5px 5px;color:#fff}.piano--black-keys .key-left{justify-content:flex-start}.piano--black-keys .key-right{justify-content:flex-end}.piano--black-keys .key--left{box-sizing:border-box;padding-left:2px;margin-right:-2px}.piano--black-keys .key--right{box-sizing:border-box;padding-right:2px;margin-left:-2px}.piano--black-keys .note{display:flex;flex-direction:column;align-items:center;font-weight:600;color:#fff;font-size:14px;margin-bottom:15px;text-align:center}.piano--black-keys .note>span{display:flex;align-items:baseline;height:11px;margin:1px 0}.piano--black-keys .black-key.active{background:linear-gradient(-20deg,#000,#000,#000);box-shadow:0 2px 2px rgba(32,32,32,0.3);transition:background-color .05s ease,box-shadow .05s ease;transform:translateY(5px);height:109px}.key:first-child .white-key{border-left:none;border-radius:0 0 5px 0}.key:last-child .white-key{border-right:0;border-radius:0 0 0 5px}.key:first-child .white-key.active,.key:last-child .white-key.active{box-shadow:0 0 0 rgba(32,32,32,0)}.accidental{font-family:"Musicca Unicode";font-size:92%;padding-left:1px;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.hide--tablet{display:none}.tools__page__content{padding:0 75px 50px 75px;margin:auto}
+#sheet{
+  width: 60%;
+  height: 20px;
+  margin: auto;
+  border: 2pt solid blue;
+  background: pink;
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  line-height: 25px;
+  overflow: hidden;
+}
 
-.piano{width:100%;overflow-y:scroll}.piano::-webkit-scrollbar{width:0;background:transparent;display:none}
-.piano--white-keys{width:750px;height:185px}.piano--black-keys{width:750px;max-width:750px!important}
-.key span i{margin-bottom:10px;width:18px;height:18px}.key .black-key{height:100px}
-.key .black-key.active{top:5px;height:100px}
-.key .white-key{height:180px}
-.key .white-key.active{top:5px}
+.piano {	
+	width: 780px;
+	background-color: yellow;
+	margin: auto;
+	display: flex;
+	justify-content: center;
+	overflow: hidden;
+}
+
+.piano--white-keys{
+	width:750px;
+	height:185px;
+	text-align:center;
+	display:flex;
+	justify-content:center;
+}
+
+.piano--black-keys{
+	position:absolute;
+	display:flex;
+	justify-content:center;
+	width: 750px;
+	z-index:2;
+}
+
+@media (max-width: 400px) {
+	.piano, .piano--black-keys, .piano--white-keys {
+		width: 400px;
+	}
+}
+
+.key{
+	width:100%;
+	cursor:pointer;
+	z-index:1;
+}
+
+.piano--white-keys > .key{
+	border: 1pt solid gray;
+	list-style-type: none;
+}
+
+.key .white-key{
+	height: 100%;
+	display:flex;
+	align-items:flex-end;
+	justify-content:center;
+	background:white;
+	width:100%;
+}
+
+.key .black-key{
+	height:100px
+}
+
+.key .note{
+	margin-bottom:11px;
+}
+
+.piano--black-keys ul{
+	display:flex;
+	width:95%;
+	padding-bottom:0;
+}
+
+.piano--black-keys li{
+	display:flex;
+	justify-content:center;
+	width:100%;
+	box-sizing:border-box;
+	list-style-type: none;
+}
+
+.piano--black-keys li>span{
+	height:110px;
+	display:flex;
+	justify-content:center;
+	align-items:flex-end;
+	width:80%;
+	background-color: black;
+	background:linear-gradient(-20deg,#222,#000,#222);
+	box-shadow:0 5px 1px rgba(32,32,32,0.2);
+	border-radius:0 0 5px 5px;
+	color: white;
+}
+
+.piano--black-keys .key-left, .key-right{
+	box-sizing: border-box;
+	padding-left:2px;
+	margin-right:-2px;
+}
+
+.piano--black-keys .key-left{
+	justify-content:flex-start
+}
+
+.piano--black-keys .key-right{
+	justify-content:flex-end;
+}
+
+.piano--black-keys .note{
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	font-weight:600;
+	color:#fff;
+	font-size:14px;
+	margin-bottom:45px;
+	text-align:center;
+}
+
 
 #direction{
 	width: 200px;
@@ -96,4 +200,13 @@ body {
   background-color: white;
   min-width: 160px;
   z-index: 1;
+}
+
+#bee {
+	width: 100%;
+	height: auto;
+	visibility: visible;
+	position: relative;
+	left: 5px;
+	top: -30px;
 }
