--- a/public/piano.css
+++ b/public/piano.css
@@ -33,18 +33,36 @@ body {
   height: 20px;
   margin: auto;
   border: 2pt solid blue;
-  background: pink;
+  background: #FFE5B4;
   padding: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
+  border-radius: 5px;
   font-size: 20px;
   line-height: 25px;
-  overflow: hidden;
+  display: content;  
+  overflow: wrap;
+  color: gray;
 }
+
+.sheet-note{
+  padding: 5px;  
+}
+
+.highlight {
+  font-size: 25px;
+  color: blue;
+  font-weight: bold;
+}
+
+.highlight1 {
+  background: pink !important;
+}
+
 
 .piano {	
 	width: 780px;
-	background-color: yellow;
+	background-color: white;
 	margin: auto;
 	display: flex;
 	justify-content: center;
