--- a/public/draw.css
+++ b/public/draw.css
@@ -84,29 +84,30 @@ body {
   
 }
 
-.but p {
-  width: 40px;
-  height: 40px;
-  background-color: pink;
-  margin: auto;
-  margin-top: 20px;
-  border: 1pt solid blue;
-  border-radius: 10px;
-  font-size: 20px;
-  display: flex;  
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
+#thickness, #colorPicker, #clearCanvas, #save{
+	width: 80px;
+	background-color: white;
+	margin: 10px;
+	border: 1pt solid blue;
+	border-radius: 10px;	
+	height: 40px;
+	display: flex;  
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;	
+	font-size: 20px;
 }
 
-#newGame, #diff{
-	width: 150px;
-	background-color: white;
+#clearCanvas{
+	background-color: #FFE5B4;
 }
 
-#kids, #easy, #medium, #hard {
-	background-color: white;
-	margin-top: 5px;
+#save{
+	background-color: pink;
+}
+
+#colorPicker{
+	background-color: black;
 }
 
 /* Show the dropdown menu on hover */
@@ -119,8 +120,26 @@ body {
   display: none;
   position: absolute;
   background-color: white;
-  min-width: 160px;
   z-index: 1;
+}
+
+.dropdown:hover .dropdown-content1 {
+  display: flex;
+  flex-direction: column;
+}
+
+.dropdown-content1 {
+  display: none;
+  position: absolute;
+  background-color: white;
+  margin: -10px 10px;
+  z-index: 1;  
+}
+
+.dropdown-content1 svg{
+  width: 100px;
+  height: 40px;
+  cursor: pointer;
 }
 
 img{
