--- a/public/common.css
+++ b/public/common.css
@@ -2,10 +2,33 @@
     padding: 0;
     margin: 0;
 }
-  
+
+.collapsible {
+  position: fixed;
+  top: 0;	
+  margin: 0px;
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 10px;
+  width: 100%;
+  border: none;
+  border-radius: 0;
+  font-size: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 30px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+  background-color: #ccc;
+}
+
 #navbar {
     position: fixed;
-    top: 0;
+    top: 30px;
     width: 100%;
     list-style-type: none;
     margin: 0;
@@ -13,7 +36,8 @@
     overflow: hidden;
     border: 1px solid #e7e7e7;
     background-color: #f3f3f3;
-    font-family: "Times New Roman"
+    font-family: "Times New Roman";
+	display: none;
 }
 
 #navbar li {
@@ -74,7 +98,7 @@ img{
 }
 
 h1{
-    margin-top: 80px;
+    margin-top: 40px;
     margin-bottom: 0px;
   }
   
