--- a/public/sa.css
+++ b/public/sa.css
@@ -1,32 +1,31 @@
 body {
   font-family: "Times New Roman", Helvetica, Arial, sans-serif;
-  height: 100vh;
+  /*height: 100vh;*/
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.radio {
-  margin-top: 10px;
+
+
+.slider {
+  width: 100%;
   display: flex;
   flex-direction: row;
-  margin-bottom: 10px;
-  width: 400px;
-  justify-content: center;
+  height: 40px;
 }
 
-label {
-  margin-left: 10px;
-  height: 10px;
-  width: 50px; 
+#num1Range, #num2Range{
+  width: 40%;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0px;
 }
 
-#cat {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+#showIllus{
+  width: 20px;
+  height: 20px;
 }
 
 #correct{
@@ -54,12 +53,12 @@ label {
   justify-content: space-between;
 }
 
-.card {
+.card, .card_s {
   margin: auto;
   background-color: #FFE5B4;
-  width: 380px;
+  width: 100px;
   height: 100px;
-  font-size: 35px;
+  font-size: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -70,11 +69,42 @@ label {
   flex-wrap: wrap;
 }
 
+.card_s{
+  width: 50px;
+  height: 50px;
+  border: none;
+  background-color: white;
+  font-weight: bold;
+  line-height: 50px;
+}
+
+#illus1, #illus2{
+  height: auto;
+  margin-top: 10px;
+  width: 120px;
+  font-size: 25px;
+  background-color: white;
+  border: 2pt solid pink;
+  color: indigo;
+  justify-content: center;
+  /*margin: 10px 20px;*/
+  padding: 10px;
+}
+
 i{
   margin: 2px;
 }
 
-.but p {
+#count {
+  margin-top: -35px;
+  margin-left: 20px;
+  height: 20px;
+  font-family: Cambria;
+  font-size: 20px;
+  text-align: left;
+}
+
+input {
   width: 70px;
   height: 50px;
   background-color: greenyellow;
@@ -82,10 +112,7 @@ i{
   margin-top: 20px;
   border: 1pt solid blue;
   border-radius: 10px;
-  font-size: 40px;
-  display: flex;  
-  justify-content: center;
-  align-items: center;
+  font-size: 20px;
 }
 
 #happy, #sad{
@@ -96,3 +123,6 @@ i{
 #sad{
   display: none;
 }
+
+
+
