--- a/public/slider.css
+++ b/public/slider.css
@@ -7,29 +7,7 @@ body {
   align-items: center;
 }
 
-.radio {
-  margin-top: 10px;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 10px;
-  width: 400px;
-  justify-content: center;
-}
-
-label {
-  margin-left: 10px;
-  height: 10px;
-  width: 50px; 
-}
-
-#cat {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
-#total, #totalClick{
+#total{
   width: 120px;
   height: 20px;
   margin: auto;
@@ -38,9 +16,6 @@ label {
   text-align: center;
 }
 
-#totalClick{
-  background-color: yellowgreen;
-}
 
 #container1 {
   display: flex;
@@ -58,36 +33,21 @@ label {
   background-color: black;
 }
 
-.grid {  
-  position: relative;
-  background-color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;  
-  border: none;
+#mySvg{
+  touch-action: none;	
+  position: absolute;	
+  background-color: #AEE4FF;
+  z-index: 0;
 }
 
-.close{
-	background-image: linear-gradient(45deg, pink, yellow);
-}
-
-.grid img{
+#mySvg img{
   visibility: visible;
 }
 
-
-.size9 {
-  width: 115px;
-  height: 115px;  	
-}
-
 .bee{
-  position: absolute;
-  top: 30px;
-  right: 30px;
   z-index: 2;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   cursor: pointer;  
 }
 
@@ -95,6 +55,11 @@ label {
   z-index: 1;
   width: 100px;
   height: 100px;  	
+}
+
+.end{
+  z-index: 1;
+  width: 250px;
 }
 
 .but p {
@@ -112,13 +77,9 @@ label {
   cursor: pointer;
 }
 
-#newGame, #diff, #startGame{
+#newGame, #diff {
 	width: 150px;
 	background-color: white;
-}
-
-#startGame {
-	background-color: pink;
 }
 
 #kids, #easy, #medium, #hard {
@@ -138,17 +99,4 @@ label {
   background-color: white;
   min-width: 160px;
   z-index: 1;
-}
-
-#happy, #sad{
-  width: 120px;
-  height: 120px;
-}
-
-#sad{
-  display: none;
-}
-
-.stop {
-  pointer-events: none;
 }
