--- a/public/slider.css
+++ b/public/slider.css
@@ -1,3 +1,8 @@
+:root {
+  --tsize: 100px;
+  --beesize: 50px;
+}
+
 body {
   font-family: "Times New Roman", Helvetica, Arial, sans-serif;
   /*height: 100vh;*/
@@ -46,15 +51,16 @@ body {
 
 .bee{
   z-index: 2;
-  width: 50px;
-  height: 50px;
+  width: var(--beesize);
+  height: var(--beesize);
   cursor: pointer;  
+  touch-action: none;	
 }
 
 .target{
   z-index: 1;
-  width: 100px;
-  height: 100px;  	
+  width: var(--tsize);
+  height: var(--tsize);  	
 }
 
 .end{
