--- a/public/sightwords.css
+++ b/public/sightwords.css
@@ -25,18 +25,15 @@ body {
 
 #learnE p{
     width: 250px;
-    height: 80px;
+    height: 70px;
     border-radius: 10px;
     font-size: 20px;
     text-align: center;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 	margin-top: 5px;
     background-color: yellow;
     border: 2pt solid blue;
 	cursor: pointer;	
+	padding-top: 10px;
 }
 
 #learnE1 img{
@@ -54,4 +51,23 @@ body {
 
 i{
   margin: 5px;
+}
+
+.highlight{
+	color: red;
+	font-weight: bold;
+}
+
+#highlight p {
+  width: 80px;
+  height: 50px;
+  background-color: greenyellow;
+  margin: auto;
+  margin-top: 20px;
+  border: 1pt solid blue;
+  border-radius: 10px;
+  font-size: 20px;
+  display: flex;  
+  justify-content: center;
+  align-items: center;
 }
