--- a/public/ec.css
+++ b/public/ec.css
@@ -92,7 +92,7 @@ label {
 	width: 50px;
 	visibility: visible;
 	margin-top: 5px;
-	margin-bottom: 4px;
+	border: 2pt solid white;
 }
 
 #pimage img{
