--- a/public/clock.css
+++ b/public/clock.css
@@ -29,6 +29,29 @@ label {
   align-items: center;
 }
 
+.learn_internal {
+	width: 100px;	
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+
+#hh, #mm{
+	margin-top: 10px;
+	font-size: 30px;
+	width: 50px;
+	height: 40px;
+	text-align: center;
+}
+
+#learn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 #correct, #error{
   width: 120px;
   height: 20px;
@@ -68,21 +91,6 @@ label {
   font-weight: bold;
 }
 
-.but p {
-  width: 30px;
-  height: 30px;
-  background-color: #FFE5B4;
-  margin: auto;
-  margin-top: 20px;
-  border: 1pt solid blue;
-  border-radius: 10px;
-  font-size: 20px;
-  display: flex;  
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-}
-
 #newGame{
 	width: 150px;
 	background-color: white;
@@ -115,7 +123,7 @@ label {
   pointer-events: none;
 }
 
-input[type="button"]{
+#choice input[type="button"]{
   width: 70px;
   height: 50px;
   background-color: greenyellow;
@@ -124,4 +132,17 @@ input[type="button"]{
   border: 1pt solid blue;
   border-radius: 10px;
   font-size: 20px;
+  cursor: pointer;
+}
+
+.learn_but input[type="button"]{
+  width: 40px;
+  height: 30px;
+  background-color: ash;
+  margin: auto;
+  margin-top: 5px;
+  border: none;
+  border-radius: 3px;
+  font-size: 20px;
+  cursor: pointer;
 }
